# comfy-cli

./: .gitignore  Pose Edit 3.json  Pose Edit.json  PoseKeypoint_00001.json  README.md  extra_model_paths.yaml  launch_comfy.bat  my_snapshot.yaml  pose.json  pyproject.toml  requirements.in  requirements.txt  sdxl_deps.json  storyboard_deps.json  tips.md
comfy_cli/: pyvenv.cfg
custom_nodes/ComfyUI-MVAdapter/: download_models.py  install.sh  pyproject.toml  requirements.txt
