[tool.poetry]
name = "comfy-cli-launcher"
version = "0.1.0"
description = "ComfyUI launcher with Poetry dependency management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
comfy-cli = "*"
insightface = "0.7.3"
onnxruntime = "1.20.1"
numpy = ">=1.21.6"
opencv-python = ">=4.9.0"
pillow = ">=9.5.0"
torch = ">=2.0.0"
torchvision = ">=0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
